--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -3,71 +3,69 @@
 --------------------------------------------------------------*/
 
 .main-navigation {
-@include font-size(1.1);
+  @include font-size(1.1);
   .menu-item-has-children {
-        position: relative;
-        ul {
-          display: none;
-        }
+    position: relative;
+    ul {
+      display: none;
+    }
   }
-  @include desktop{
+  @include desktop {
     .menu-item-has-children {
-        position: relative;
-      .sub-menu {    
+      position: relative;
+      .sub-menu {
         list-style: none;
         position: absolute;
         z-index: 99;
-              padding: 0;
-              display: none;
-              top:60px;
-  //  @include tablet-large{
-  //    display: none;
-  //  }
-            }
+        padding: 0;
+        display: none;
+        top: 60px;
+        //  @include tablet-large{
+        //    display: none;
+        //  }
+      }
       &:hover {
-         .sub-menu {
+        .sub-menu {
           position: absolute;
           right: 0;
-          top:70px;
+          top: 70px;
           z-index: 99;
           display: block;
           background: #14225f;
         }
-      
       }
     }
   }
 }
-.sub-menu{
+.sub-menu {
   padding: 0;
-  @include tablet-large{
+  @include tablet-large {
     position: absolute;
   }
   right: 0;
-  top:70px;
+  top: 70px;
   z-index: 99;
 }
 
 /* Site-Header 8*/
 
 .site-header {
-  background: #14225f;
-  @include tablet-large{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    z-index: 999 ;
-  }
+  background: $credible__blue;
+  @include tablet-large {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+  }//position fixed header
   .header-container {
-
     display: flex;
     max-width: 1000px;
-    margin:0 auto;
+    margin: 0 auto;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    @include tablet-large{
+    @include tablet-large {
       flex-wrap: nowrap;
     }
     .site-logo {
@@ -77,23 +75,21 @@
       .rcforward-logo {
         color: $white;
         padding-left: 25px;
-            flex-wrap: wrap;
+        flex-wrap: wrap;
         font-family: 'Gilroy Bold', sans-serif;
         text-transform: uppercase;
       }
       .hamburger {
         width: 30%;
-        @include tablet-large
-   {
-          display: none;
+        @include tablet-large {
+          // display: none;
         }
       }
     }
     .main-navigation {
       display: none;
       width: 100%;
-      @include tablet-large
- {
+      @include desktop {
         display: block;
       }
       .menu-header-menu-container {
@@ -101,65 +97,59 @@
           list-style: none;
           margin: 0;
           padding: 0;
-          @include tablet-large
-     {
-                display: flex;
-    justify-content: flex-end;
+          @include tablet-large {
+            display: flex;
+            justify-content: flex-end;
           }
 
           .menu-item {
             border-top: 1px solid $white;
-            padding:0;
-         text-align: center;
-         width:100%;
-         @include tablet-large
-         {
-          width:180px;
+            padding: 0;
+            text-align: center;
+            width: 100%;
+            @include tablet-large {
+              width: 180px;
               border: none;
               @include display-flex(column);
-              padding:10px;
+              padding: 10px;
             }
             a {
               color: $white;
-              padding:15px;
-                  display: block;
-              @include tablet-large
-         {
+              padding: 15px;
+              display: block;
+              @include tablet-large {
                 display: block;
                 padding: 14px 16px;
                 text-align: center;
               }
+              &:hover{
+                color:$cream__background;
+                text-shadow: $textshadow__white;
+              }
             }
             .sub-menu {
-        //       @include tablet-large
-        // {
-        //       border-bottom: 1px solid $white;
-        //                padding: 0;
-        
-        //       }
               li {
-                   background: $cream__background;
+                background: $cream__background;
                 border-bottom: 1px solid $credible__blue;
-                @include tablet-large
-          {
+                @include tablet-large {
                   background: $credible__blue;
-                     border-bottom: 1px solid $white;
-                     padding: 0;
-          
+                  border-bottom: 1px solid $white;
+                  padding: 0;
                 }
                 a {
                   color: $credible__blue;
 
-                  @include tablet-large
-            {
+                  @include tablet-large {
                     color: $white;
-                    padding:32px;
-                    
+                    padding: 32px;
                   }
-                }// a
-              }// li
-            }// .sub-menu
-          }// .menu-item
+                } // a
+              } // li
+               li:last-child{
+                  border-bottom: none;
+                }
+            } // .sub-menu
+          } // .menu-item
         }
       }
     }
@@ -171,7 +161,7 @@
   &::after {
     transition: 0.5s;
     content: '\f078';
-    font-family: Font Awesome\ 5 Free;
+    font-family: Font Awesome\5 Free;
     font-weight: 900;
     right: 2em;
     color: white;
