Remove extra margin on the bottom of single-funds.php

--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -639,6 +639,9 @@
         }
       }
     }
+    .custom-plan {
+      margin: 0 auto;
+    }
     @include tablet {
       .related-charities {
         // max-width: 96%;
