--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -22,25 +22,37 @@ h3.more-article {
   text-align: center;
 }
 .more-post {
-  margin: 66px;
+  display: flex;
+  flex-direction:column;
+  margin: 1rem;
+  @include tablet{
+      flex-direction:row;
+  }
   @include desktop {
-    display: flex;
+      margin: 66px;
     justify-content: space-around;
   }
   .next-post,
   .previous-post {
+        margin: 1rem;
     border: 1px solid #d7d0f2;
     box-shadow: 0 2px 2px #42299a;
+    @include tablet{
+
     margin-bottom: 3rem;
+    }
     @include desktop {
       margin: 3rem;
     }
     .next-post-image,
     .prev-post-image {
       img {
+              width: 100%;
+                        height: 212px;
         object-fit: cover;
-        height: 382px;
-        width: 100%;
+        @include tablet{
+        height: 270px;
+        }
         @include desktop{
    height: 600px;
         }
@@ -58,9 +70,16 @@ h3.more-article {
         .next-post-meta,
         .prev-post-meta {
           color: #a7a3d6;
-          padding: 10px;
+margin:0;
           @include desktop{
             font-size: 1rem;
+          }
+        }
+        h3{
+          font-size: 1rem;
+ 
+          @include desktop{
+               font-size: 2rem;
           }
         }
       }
@@ -152,12 +171,10 @@ h3.more-article {
       position: absolute;
       bottom: -6px;
       right: 17px;
-  
       @include desktop {
         bottom: 7px;
       }
     }
-  
   }
 }
 .single {
@@ -168,9 +185,6 @@ h3.more-article {
     font-size: 1rem;
     padding-right: 24px;
     padding-bottom: 15px;
-    // @include desktop {
-    //   padding-bottom: 30px;
-    // }
     .read-more-button {
       color: $color__link;
       padding-bottom: 15px;
@@ -183,9 +197,6 @@ h3.more-article {
       position: absolute;
          bottom: 22px;
       right: 17px;
-      // @include desktop {
-      //   bottom: 7px;
-      // }
     }
   }
 }
@@ -200,7 +211,6 @@ h3.more-article {
         width: 100%;
       }
       .entry-content {
-  
         padding: 2em;
         @include desktop {
           display: flex;
@@ -303,13 +313,13 @@ h3.more-article {
       font-weight: 600;
     }
     h3 {
-      font-size: 1.5rem;
+font-size: 1.3rem;
       margin-top: 6px;
       padding: 0;
     }
   }
   .entry-content{
-              font-size: 1.2rem;
+             font-size: 0.9rem;
   }
 }
 
@@ -318,8 +328,6 @@ h3.more-article {
 .next-1 {
   display: none;
 }
-
-
 
 //AJAX load more
 .blog {
