--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -24,12 +24,13 @@ h3.more-article {
 .more-post {
   display: flex;
   flex-direction:column;
-  margin: 1rem;
+    margin: 0.5rem;
   @include tablet{
       flex-direction:row;
+            // margin: 0 12rem;
   }
   @include desktop {
-      margin: 66px;
+        margin: 0 122px;
     justify-content: space-around;
   }
   .next-post,
@@ -42,20 +43,33 @@ h3.more-article {
     margin-bottom: 3rem;
     }
     @include desktop {
-      margin: 3rem;
+    
     }
-    .next-post-image,
+    .next-post-image{
+      img{
+                 height: 100%;
+        object-fit: cover;
+        width: 100%;
+        @include tablet{
+                height: 175px;
+
+  @include desktop{
+        height: 148px;
+  }
+      }
+    }
+    }
     .prev-post-image {
       img {
-              width: 100%;
-                        height: 212px;
+             width:100%;
+          height: 100%;
         object-fit: cover;
         @include tablet{
-        height: 270px;
+    height: 175px;
         }
-        @include desktop{
-   height: 600px;
-        }
+         @include desktop{
+        height: 148px;
+  }
       }
     }
     .next-post-content,
@@ -64,7 +78,7 @@ h3.more-article {
    .next-post-main, .prev-post-main{
         display: none;
       }
-          margin: 1rem;
+         margin: 0.5rem;
       .next-post-title,
       .prev-post-title {
         .next-post-meta,
@@ -77,9 +91,13 @@ margin:0;
         }
         h3{
           font-size: 1rem;
- 
+              margin-bottom: 38px;
           @include desktop{
-               font-size: 2rem;
+font-size: 1rem;
+    line-height: 1.5rem;
+
+
+
           }
         }
       }
@@ -160,14 +178,17 @@ margin:0;
       padding-bottom: 30px;
     }
     .read-more-button {
-      color: $color__link;
+      color: $innovative__purple;
       padding-bottom: 15px;
       padding-right: 24px;
-      font-size: 1.2rem;
+      font-size: 0.9rem;
+      @include desktop{
+           font-size: 1.3rem;
+      }
     }
     .read-more-arrow {
       font-size: 4rem;
-      color: $color__link;
+       color: $innovative__purple;
       position: absolute;
       bottom: -6px;
       right: 17px;
@@ -184,18 +205,18 @@ margin:0;
     padding-right: 1rem;
     font-size: 1rem;
     padding-right: 24px;
-    padding-bottom: 15px;
+  
     .read-more-button {
-      color: $color__link;
+      color: $innovative__purple;
       padding-bottom: 15px;
       padding-right: 24px;
-      font-size: 1.2rem;
+      font-size: 0.9rem;
     }
     .read-more-arrow {
-      font-size: 4rem;
-      color: $color__link;
+      font-size: 3rem;
+     color: $innovative__purple;
       position: absolute;
-         bottom: 22px;
+         bottom: 6px;
       right: 17px;
     }
   }
@@ -203,7 +224,7 @@ margin:0;
 
 /* Single-Post */
 .post-template-default {
-  line-height: 2rem;
+  line-height: 1.4rem;
   .site-content {
     padding: 0;
     .post {
@@ -220,12 +241,14 @@ margin:0;
         .entry-title {
           line-height: 1.2em;
           .entry-meta {
-            font-size: 1.2rem;
+            font-size: 0.8rem;
             color: #a7a3d6;
             font-weight: bold;
           }
           h2 {
             color: $credible__blue;
+            font-size: 1rem;
+            text-transform: capitalize;
           }
         }
         .entry-main {
@@ -259,6 +282,7 @@ margin:0;
           }
         }
         p {
+           font-size: 0.8rem;
           line-height: 1.8rem;
         }
       }
@@ -286,14 +310,14 @@ margin:0;
 }
 //single part
 .post-blog {
-  margin: 2rem;
+  margin: 1.5rem;
   border: 1px solid #d7d0f2;
   box-shadow: 0 2px 2px #42299a;
   @include tablet {
     margin: 4rem;
   }
   @include desktop {
-    margin: 12rem;
+      margin: 0 8rem 5rem;
   }
   .entry-header {
     img {
@@ -303,23 +327,44 @@ margin:0;
     }
   }
   .post-content{
-    margin: 1rem;
+     margin: 0.4rem;
+     @include desktop{
+           margin: 1rem;
+     }
   }
   .entry-title {
     
     .posted-on {
-      font-size:  1.3rem;
+ font-size: 0.6rem;
       color: #a7a3d6;
       font-weight: 600;
+      @include tablet{
+       font-size: 0.9rem;
+      }
     }
     h3 {
-font-size: 1.3rem;
-      margin-top: 6px;
-      padding: 0;
+      font-size: 1rem;
+    margin: 5px 0 53px 0;
+    padding: 0;
+    @include tablet{
+            font-size: 1.5rem;
+    }
+      @include desktop{
+            font-size: 1.5rem;
+        
+    }
     }
   }
   .entry-content{
-             font-size: 0.9rem;
+    display: none;
+    @include tablet{
+      display: block;
+    font-size: 1rem;
+    @include desktop{
+     margin: 5px 0 94px;
+    }
+    }
+          
   }
 }
 
@@ -344,4 +389,14 @@ font-size: 1.3rem;
     }
   }
 }
+//post
+.post-navigation{
+  @include tablet{
+         width: 705px;
 
+    margin: 0 auto;
+  }
+  @include desktop{
+    width: 60rem;
+  }
+}
