--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -4041,7 +4041,7 @@ h3.more-article {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 1rem; }
+  margin: 0.5rem; }
   @media (min-width: 600px) {
     .more-post {
       -webkit-box-orient: horizontal;
@@ -4050,7 +4050,7 @@ h3.more-article {
               flex-direction: row; } }
   @media (min-width: 1000px) {
     .more-post {
-      margin: 66px;
+      margin: 0 122px;
       -ms-flex-pack: distribute;
           justify-content: space-around; } }
   .more-post .next-post,
@@ -4063,35 +4063,39 @@ h3.more-article {
       .more-post .next-post,
       .more-post .previous-post {
         margin-bottom: 3rem; } }
-    @media (min-width: 1000px) {
-      .more-post .next-post,
-      .more-post .previous-post {
-        margin: 3rem; } }
     .more-post .next-post .next-post-image img,
+    .more-post .previous-post .next-post-image img {
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover;
+      width: 100%; }
+      @media (min-width: 600px) {
+        .more-post .next-post .next-post-image img,
+        .more-post .previous-post .next-post-image img {
+          height: 175px; } }
+  @media (min-width: 600px) and (min-width: 1000px) {
+    .more-post .next-post .next-post-image img,
+    .more-post .previous-post .next-post-image img {
+      height: 148px; } }
     .more-post .next-post .prev-post-image img,
-    .more-post .previous-post .next-post-image img,
     .more-post .previous-post .prev-post-image img {
       width: 100%;
-      height: 212px;
+      height: 100%;
       -o-object-fit: cover;
          object-fit: cover; }
       @media (min-width: 600px) {
-        .more-post .next-post .next-post-image img,
         .more-post .next-post .prev-post-image img,
-        .more-post .previous-post .next-post-image img,
         .more-post .previous-post .prev-post-image img {
-          height: 270px; } }
+          height: 175px; } }
       @media (min-width: 1000px) {
-        .more-post .next-post .next-post-image img,
         .more-post .next-post .prev-post-image img,
-        .more-post .previous-post .next-post-image img,
         .more-post .previous-post .prev-post-image img {
-          height: 600px; } }
+          height: 148px; } }
     .more-post .next-post .next-post-content,
     .more-post .next-post .prev-post-content,
     .more-post .previous-post .next-post-content,
     .more-post .previous-post .prev-post-content {
-      margin: 1rem; }
+      margin: 0.5rem; }
       .more-post .next-post .next-post-content .next-post-main, .more-post .next-post .next-post-content .prev-post-main,
       .more-post .next-post .prev-post-content .next-post-main,
       .more-post .next-post .prev-post-content .prev-post-main,
@@ -4144,7 +4148,8 @@ h3.more-article {
       .more-post .previous-post .next-post-content .prev-post-title h3,
       .more-post .previous-post .prev-post-content .next-post-title h3,
       .more-post .previous-post .prev-post-content .prev-post-title h3 {
-        font-size: 1rem; }
+        font-size: 1rem;
+        margin-bottom: 38px; }
         @media (min-width: 1000px) {
           .more-post .next-post .next-post-content .next-post-title h3,
           .more-post .next-post .next-post-content .prev-post-title h3,
@@ -4154,7 +4159,8 @@ h3.more-article {
           .more-post .previous-post .next-post-content .prev-post-title h3,
           .more-post .previous-post .prev-post-content .next-post-title h3,
           .more-post .previous-post .prev-post-content .prev-post-title h3 {
-            font-size: 2rem; } }
+            font-size: 1rem;
+            line-height: 1.5rem; } }
 
 .blog {
   display: -webkit-box;
@@ -4224,13 +4230,16 @@ h3.more-article {
     .blog .read-more {
       padding-bottom: 30px; } }
   .blog .read-more .read-more-button {
-    color: royalblue;
+    color: #42299A;
     padding-bottom: 15px;
     padding-right: 24px;
-    font-size: 1.2rem; }
+    font-size: 0.9rem; }
+    @media (min-width: 1000px) {
+      .blog .read-more .read-more-button {
+        font-size: 1.3rem; } }
   .blog .read-more .read-more-arrow {
     font-size: 4rem;
-    color: royalblue;
+    color: #42299A;
     position: absolute;
     bottom: -6px;
     right: 17px; }
@@ -4243,23 +4252,22 @@ h3.more-article {
   text-align: right;
   padding-right: 1rem;
   font-size: 1rem;
-  padding-right: 24px;
-  padding-bottom: 15px; }
+  padding-right: 24px; }
   .single .read-more .read-more-button {
-    color: royalblue;
+    color: #42299A;
     padding-bottom: 15px;
     padding-right: 24px;
-    font-size: 1.2rem; }
+    font-size: 0.9rem; }
   .single .read-more .read-more-arrow {
-    font-size: 4rem;
-    color: royalblue;
+    font-size: 3rem;
+    color: #42299A;
     position: absolute;
-    bottom: 22px;
+    bottom: 6px;
     right: 17px; }
 
 /* Single-Post */
 .post-template-default {
-  line-height: 2rem; }
+  line-height: 1.4rem; }
   .post-template-default .site-content {
     padding: 0; }
     .post-template-default .site-content .post .entry-header {
@@ -4279,11 +4287,13 @@ h3.more-article {
       .post-template-default .site-content .post .entry-content .entry-title {
         line-height: 1.2em; }
         .post-template-default .site-content .post .entry-content .entry-title .entry-meta {
-          font-size: 1.2rem;
+          font-size: 0.8rem;
           color: #a7a3d6;
           font-weight: bold; }
         .post-template-default .site-content .post .entry-content .entry-title h2 {
-          color: #14225F; }
+          color: #14225F;
+          font-size: 1rem;
+          text-transform: capitalize; }
       @media (min-width: 1000px) {
         .post-template-default .site-content .post .entry-content .entry-main {
           padding: 2rem;
@@ -4308,6 +4318,7 @@ h3.more-article {
       .post-template-default .site-content .post .entry-content .entry-footer a {
         color: #14225F; }
       .post-template-default .site-content .post .entry-content p {
+        font-size: 0.8rem;
         line-height: 1.8rem; }
 
 /* pseudo quote */
@@ -4328,7 +4339,7 @@ h3.more-article {
   padding: 30px; }
 
 .post-blog {
-  margin: 2rem;
+  margin: 1.5rem;
   border: 1px solid #d7d0f2;
   -webkit-box-shadow: 0 2px 2px #42299a;
           box-shadow: 0 2px 2px #42299a; }
@@ -4337,24 +4348,43 @@ h3.more-article {
       margin: 4rem; } }
   @media (min-width: 1000px) {
     .post-blog {
-      margin: 12rem; } }
+      margin: 0 8rem 5rem; } }
   .post-blog .entry-header img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     height: 100%; }
   .post-blog .post-content {
-    margin: 1rem; }
+    margin: 0.4rem; }
+    @media (min-width: 1000px) {
+      .post-blog .post-content {
+        margin: 1rem; } }
   .post-blog .entry-title .posted-on {
-    font-size: 1.3rem;
+    font-size: 0.6rem;
     color: #a7a3d6;
     font-weight: 600; }
+    @media (min-width: 600px) {
+      .post-blog .entry-title .posted-on {
+        font-size: 0.9rem; } }
   .post-blog .entry-title h3 {
-    font-size: 1.3rem;
-    margin-top: 6px;
+    font-size: 1rem;
+    margin: 5px 0 53px 0;
     padding: 0; }
+    @media (min-width: 600px) {
+      .post-blog .entry-title h3 {
+        font-size: 1.5rem; } }
+    @media (min-width: 1000px) {
+      .post-blog .entry-title h3 {
+        font-size: 1.5rem; } }
   .post-blog .entry-content {
-    font-size: 0.9rem; }
+    display: none; }
+    @media (min-width: 600px) {
+      .post-blog .entry-content {
+        display: block;
+        font-size: 1rem; } }
+  @media (min-width: 600px) and (min-width: 1000px) {
+    .post-blog .entry-content {
+      margin: 5px 0 94px; } }
 
 .pre-nav-1,
 .next-1 {
@@ -4371,3 +4401,12 @@ h3.more-article {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+
+@media (min-width: 600px) {
+  .post-navigation {
+    width: 705px;
+    margin: 0 auto; } }
+
+@media (min-width: 1000px) {
+  .post-navigation {
+    width: 60rem; } }
