--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -3,108 +3,118 @@
 --------------------------------------------------------------*/
 
 .post-template-default {
-    .post {
-      .entry-header {
-        img {
-          width: 100%;
-          object-fit: cover;
-          height: 100%;
-        }
-        .entry-content {
-          padding: 2rem;
-        }
+  .post {
+    .entry-header {
+      img {
+        width: 100%;
+        object-fit: cover;
+        height: 100%;
+      }
+      .entry-content {
+        padding: 2rem;
       }
     }
   }
+}
 
 // .post-navigation
 h3.more-article {
+  font-size: 1.2rem;
+  font-weight: 600;
   text-align: center;
+  margin: 0;
+  @include tablet {
+    font-size: 1.5rem;
+  }
+  @include desktop {
+    font-size: 2rem;
+  }
 }
 .more-post {
   display: flex;
-  flex-direction:column;
-    margin: 0.5rem;
-  @include tablet{
-      flex-direction:row;
-            // margin: 0 12rem;
+  flex-direction: column;
+  margin: 0 2rem;
+  @include tablet {
+    flex-direction: row;
   }
   @include desktop {
-        margin: 0 122px;
+    margin: 0 122px;
     justify-content: space-around;
   }
   .next-post,
   .previous-post {
-        margin: 1rem;
+    max-width: 251px;
+    margin: 2rem auto;
     border: 1px solid #d7d0f2;
     box-shadow: 0 2px 2px #42299a;
-    @include tablet{
-
-    margin-bottom: 3rem;
+    &:hover {
+      box-shadow: 0px 2px 2px darken($credible__blue, 20%);
+      text-shadow: $textshadow__white;
     }
     @include desktop {
-    
+      max-width: 251px;
     }
-    .next-post-image{
-      img{
-                 height: 100%;
-        object-fit: cover;
+    @include tablet {
+      margin-bottom: 3rem;
+      max-width: 275px;
+    }
+    .next-post-image {
+      max-width: 100%;
+      img {
         width: 100%;
-        @include tablet{
-                height: 175px;
-
-  @include desktop{
-        height: 148px;
-  }
+        height: 137px;
+        object-fit: cover;
+        @include tablet {
+          height: 175px;
+          @include desktop {
+            height: 148px;
+          }
+        }
       }
     }
-    }
     .prev-post-image {
+      max-width: 100%;
       img {
-             width:100%;
-          height: 100%;
+        width: 100%;
+        height: 126px;
         object-fit: cover;
-        @include tablet{
-    height: 175px;
+        @include tablet {
+          height: 175px;
         }
-         @include desktop{
-        height: 148px;
-  }
+        @include desktop {
+          height: 148px;
+        }
       }
     }
     .next-post-content,
     .prev-post-content {
-
-   .next-post-main, .prev-post-main{
+      .next-post-main,
+      .prev-post-main {
         display: none;
       }
-         margin: 0.5rem;
+      margin: 0.5rem;
       .next-post-title,
       .prev-post-title {
         .next-post-meta,
         .prev-post-meta {
           color: #a7a3d6;
-margin:0;
-          @include desktop{
+          margin: 0;
+          @include desktop {
             font-size: 1rem;
           }
         }
-        h3{
+        h3 {
           font-size: 1rem;
-              margin-bottom: 38px;
-          @include desktop{
-font-size: 1rem;
-    line-height: 1.5rem;
-
-
-
+          margin-bottom: 38px;
+          @include desktop {
+            font-size: 1rem;
+            line-height: 1.5rem;
           }
         }
       }
     }
   }
 }
-
 
 .blog {
   display: flex;
@@ -166,7 +176,7 @@ font-size: 1rem;
   }
 }
 
-//blog and post read More Button
+//blog and post read more button
 .blog {
   .read-more {
     position: relative;
@@ -182,13 +192,17 @@ font-size: 1rem;
       padding-bottom: 15px;
       padding-right: 24px;
       font-size: 0.9rem;
-      @include desktop{
-           font-size: 1.3rem;
+
+      &:hover {
+        text-shadow: 1px 0.5px 1px #999;
+      }
+      @include desktop {
+        font-size: 1.3rem;
       }
     }
     .read-more-arrow {
       font-size: 4rem;
-       color: $innovative__purple;
+      color: $innovative__purple;
       position: absolute;
       bottom: -6px;
       right: 17px;
@@ -205,7 +219,7 @@ font-size: 1rem;
     padding-right: 1rem;
     font-size: 1rem;
     padding-right: 24px;
-  
+
     .read-more-button {
       color: $innovative__purple;
       padding-bottom: 15px;
@@ -214,9 +228,9 @@ font-size: 1rem;
     }
     .read-more-arrow {
       font-size: 3rem;
-     color: $innovative__purple;
+      color: $innovative__purple;
       position: absolute;
-         bottom: 6px;
+      bottom: 6px;
       right: 17px;
     }
   }
@@ -232,7 +246,7 @@ font-size: 1rem;
         width: 100%;
       }
       .entry-content {
-        padding: 2em;
+        padding: 0 1rem 2rem;
         @include desktop {
           display: flex;
           flex-direction: column;
@@ -241,6 +255,7 @@ font-size: 1rem;
         .entry-title {
           line-height: 1.2em;
           .entry-meta {
+            margin-top: 0.5rem;
             font-size: 0.8rem;
             color: #a7a3d6;
             font-weight: bold;
@@ -249,6 +264,9 @@ font-size: 1rem;
             color: $credible__blue;
             font-size: 1rem;
             text-transform: capitalize;
+            @include tablet {
+              font-size: 2rem;
+            }
           }
         }
         .entry-main {
@@ -277,13 +295,35 @@ font-size: 1rem;
           }
         }
         .entry-footer {
+          font-size: 0.8rem;
+          @include desktop {
+            font-size: 1rem;
+          }
           a {
             color: $credible__blue;
           }
         }
         p {
-           font-size: 0.8rem;
+          font-size: 0.8rem;
           line-height: 1.8rem;
+          @include tablet {
+            font-size: 1rem;
+          }
+          @include desktop {
+            font-size: 1.2rem;
+          }
+        }
+        ul {
+          li {
+            font-size: 0.8rem;
+            @include tablet {
+              font-size: 1rem;
+            }
+            @include desktop {
+              font-size: 1.2rem;
+              line-height: 1.6rem;
+            }
+          }
         }
       }
     }
@@ -317,7 +357,7 @@ font-size: 1rem;
     margin: 4rem;
   }
   @include desktop {
-      margin: 0 8rem 5rem;
+    margin: 0 8rem 5rem;
   }
   .entry-header {
     img {
@@ -326,45 +366,42 @@ font-size: 1rem;
       height: 100%;
     }
   }
-  .post-content{
-     margin: 0.4rem;
-     @include desktop{
-           margin: 1rem;
-     }
+  .post-content {
+    margin: 0.4rem;
+    @include desktop {
+      margin: 1rem;
+    }
   }
   .entry-title {
-    
     .posted-on {
- font-size: 0.6rem;
+      font-size: 0.6rem;
       color: #a7a3d6;
       font-weight: 600;
-      @include tablet{
-       font-size: 0.9rem;
+      @include tablet {
+        font-size: 0.9rem;
       }
     }
     h3 {
       font-size: 1rem;
-    margin: 5px 0 53px 0;
-    padding: 0;
-    @include tablet{
-            font-size: 1.5rem;
-    }
-      @include desktop{
-            font-size: 1.5rem;
-        
-    }
+      margin: 5px 0 53px 0;
+      padding: 0;
+      @include tablet {
+        font-size: 1.5rem;
+      }
+      @include desktop {
+        font-size: 1.5rem;
+      }
     }
   }
-  .entry-content{
+  .entry-content {
     display: none;
-    @include tablet{
+    @include tablet {
       display: block;
-    font-size: 1rem;
-    @include desktop{
-     margin: 5px 0 94px;
+      font-size: 1rem;
+      @include desktop {
+        margin: 5px 0 94px;
+      }
     }
-    }
-          
   }
 }
 
@@ -382,7 +419,8 @@ font-size: 1rem;
     border-radius: 6px;
     background-color: $credible__blue;
     &:hover {
-      background-color: $credible__blue;
+      text-shadow: 1px 0.5px 1px #999;
+      box-shadow: 5px 3px 5px #42299a;
     }
     .ajax-load-more-wrap {
       display: flex;
@@ -390,13 +428,12 @@ font-size: 1rem;
   }
 }
 //post
-.post-navigation{
-  @include tablet{
-         width: 705px;
-
+.post-navigation {
+  @include tablet {
+    width: 705px;
     margin: 0 auto;
   }
-  @include desktop{
+  @include desktop {
     width: 60rem;
   }
 }
