--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -3000,16 +3000,27 @@ ol.flickity-page-dots {
       margin-top: 9px;
       margin-bottom: 13px; }
   .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p input[type='submit'] {
+    background: #14225F;
+    border: 2px solid #14225F;
     color: #fff;
-    width: 150px;
     border-radius: 5px;
-    height: 62px;
+    font-size: 1.4rem;
+    width: 156px;
+    height: 54px;
     font-size: 1.4rem; }
     @media (min-width: 600px) {
       .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p input[type='submit'] {
-        background: #fff;
         color: #14225F;
-        border: 2px solid #14225F; } }
+        border: 2px solid #14225F;
+        background: #fff; }
+        .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p input[type='submit']:hover {
+          background: #42299A;
+          color: #fff;
+          text-shadow: #f9f5ed; } }
+    .page-template-page-contact .site-content .post-25 .entry-content .wp-block-column .wpcf7 p input[type='submit']:hover {
+      background: #42299A;
+      color: #fff;
+      text-shadow: #f9f5ed; }
 
 .wpcf7-form {
   padding: 0; }
@@ -3029,14 +3040,37 @@ ol.flickity-page-dots {
           flex-direction: column; }
   @media (min-width: 1000px) {
     .wp-block-columns {
+      margin: 0 auto;
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
           -ms-flex-direction: row;
-              flex-direction: row; } }
+              flex-direction: row;
+      padding: 40px; } }
 
 @media (min-width: 600px) {
   .contact-browse {
     display: none; } }
+
+.wpcf7-submit:focus {
+  outline: none; }
+
+.wpcf7-validation-errors {
+  border: 0;
+  font-size: 1rem; }
+  .wpcf7-validation-errors:focus {
+    border: 0;
+    outline: 0; }
+
+div.wpcf7-mail-sent-ok {
+  border: none;
+  font-weight: 600;
+  color: #14225F; }
+
+div.wpcf7-validation-errors,
+div.wpcf7-acceptance-missing {
+  border: none;
+  font-weight: 600;
+  color: #14225F; }
 
 /*--------------------------------------------------------------
 # 404 Page
@@ -4031,7 +4065,16 @@ ol.flickity-page-dots {
   padding: 2rem; }
 
 h3.more-article {
-  text-align: center; }
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  margin: 0; }
+  @media (min-width: 600px) {
+    h3.more-article {
+      font-size: 1.5rem; } }
+  @media (min-width: 1000px) {
+    h3.more-article {
+      font-size: 2rem; } }
 
 .more-post {
   display: -webkit-box;
@@ -4041,7 +4084,7 @@ h3.more-article {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0.5rem; }
+  margin: 0 2rem; }
   @media (min-width: 600px) {
     .more-post {
       -webkit-box-orient: horizontal;
@@ -4055,48 +4098,66 @@ h3.more-article {
           justify-content: space-around; } }
   .more-post .next-post,
   .more-post .previous-post {
-    margin: 1rem;
+    max-width: 251px;
+    margin: 2rem auto;
     border: 1px solid #d7d0f2;
     -webkit-box-shadow: 0 2px 2px #42299a;
             box-shadow: 0 2px 2px #42299a; }
+    .more-post .next-post:hover,
+    .more-post .previous-post:hover {
+      -webkit-box-shadow: 0px 2px 2px #02040b;
+              box-shadow: 0px 2px 2px #02040b;
+      text-shadow: 1px 0.5px 1px #999999; }
+    @media (min-width: 1000px) {
+      .more-post .next-post,
+      .more-post .previous-post {
+        max-width: 251px; } }
     @media (min-width: 600px) {
       .more-post .next-post,
       .more-post .previous-post {
-        margin-bottom: 3rem; } }
-    .more-post .next-post .next-post-image img,
-    .more-post .previous-post .next-post-image img {
-      height: 100%;
-      -o-object-fit: cover;
-         object-fit: cover;
-      width: 100%; }
-      @media (min-width: 600px) {
-        .more-post .next-post .next-post-image img,
-        .more-post .previous-post .next-post-image img {
-          height: 175px; } }
+        margin-bottom: 3rem;
+        max-width: 275px; } }
+    .more-post .next-post .next-post-image,
+    .more-post .previous-post .next-post-image {
+      max-width: 100%; }
+      .more-post .next-post .next-post-image img,
+      .more-post .previous-post .next-post-image img {
+        width: 100%;
+        height: 137px;
+        -o-object-fit: cover;
+           object-fit: cover; }
+        @media (min-width: 600px) {
+          .more-post .next-post .next-post-image img,
+          .more-post .previous-post .next-post-image img {
+            height: 175px; } }
   @media (min-width: 600px) and (min-width: 1000px) {
     .more-post .next-post .next-post-image img,
     .more-post .previous-post .next-post-image img {
       height: 148px; } }
-    .more-post .next-post .prev-post-image img,
-    .more-post .previous-post .prev-post-image img {
-      width: 100%;
-      height: 100%;
-      -o-object-fit: cover;
-         object-fit: cover; }
-      @media (min-width: 600px) {
-        .more-post .next-post .prev-post-image img,
-        .more-post .previous-post .prev-post-image img {
-          height: 175px; } }
-      @media (min-width: 1000px) {
-        .more-post .next-post .prev-post-image img,
-        .more-post .previous-post .prev-post-image img {
-          height: 148px; } }
+    .more-post .next-post .prev-post-image,
+    .more-post .previous-post .prev-post-image {
+      max-width: 100%; }
+      .more-post .next-post .prev-post-image img,
+      .more-post .previous-post .prev-post-image img {
+        width: 100%;
+        height: 126px;
+        -o-object-fit: cover;
+           object-fit: cover; }
+        @media (min-width: 600px) {
+          .more-post .next-post .prev-post-image img,
+          .more-post .previous-post .prev-post-image img {
+            height: 175px; } }
+        @media (min-width: 1000px) {
+          .more-post .next-post .prev-post-image img,
+          .more-post .previous-post .prev-post-image img {
+            height: 148px; } }
     .more-post .next-post .next-post-content,
     .more-post .next-post .prev-post-content,
     .more-post .previous-post .next-post-content,
     .more-post .previous-post .prev-post-content {
       margin: 0.5rem; }
-      .more-post .next-post .next-post-content .next-post-main, .more-post .next-post .next-post-content .prev-post-main,
+      .more-post .next-post .next-post-content .next-post-main,
+      .more-post .next-post .next-post-content .prev-post-main,
       .more-post .next-post .prev-post-content .next-post-main,
       .more-post .next-post .prev-post-content .prev-post-main,
       .more-post .previous-post .next-post-content .next-post-main,
@@ -4234,6 +4295,8 @@ h3.more-article {
     padding-bottom: 15px;
     padding-right: 24px;
     font-size: 0.9rem; }
+    .blog .read-more .read-more-button:hover {
+      text-shadow: 1px 0.5px 1px #999; }
     @media (min-width: 1000px) {
       .blog .read-more .read-more-button {
         font-size: 1.3rem; } }
@@ -4273,7 +4336,7 @@ h3.more-article {
     .post-template-default .site-content .post .entry-header {
       width: 100%; }
     .post-template-default .site-content .post .entry-content {
-      padding: 2em; }
+      padding: 0 1rem 2rem; }
       @media (min-width: 1000px) {
         .post-template-default .site-content .post .entry-content {
           display: -webkit-box;
@@ -4287,6 +4350,7 @@ h3.more-article {
       .post-template-default .site-content .post .entry-content .entry-title {
         line-height: 1.2em; }
         .post-template-default .site-content .post .entry-content .entry-title .entry-meta {
+          margin-top: 0.5rem;
           font-size: 0.8rem;
           color: #a7a3d6;
           font-weight: bold; }
@@ -4294,6 +4358,9 @@ h3.more-article {
           color: #14225F;
           font-size: 1rem;
           text-transform: capitalize; }
+          @media (min-width: 600px) {
+            .post-template-default .site-content .post .entry-content .entry-title h2 {
+              font-size: 2rem; } }
       @media (min-width: 1000px) {
         .post-template-default .site-content .post .entry-content .entry-main {
           padding: 2rem;
@@ -4315,11 +4382,31 @@ h3.more-article {
       .post-template-default .site-content .post .entry-content .entry-main h3 {
         font-size: 1.2rem;
         font-weight: 700; }
-      .post-template-default .site-content .post .entry-content .entry-footer a {
-        color: #14225F; }
+      .post-template-default .site-content .post .entry-content .entry-footer {
+        font-size: 0.8rem; }
+        @media (min-width: 1000px) {
+          .post-template-default .site-content .post .entry-content .entry-footer {
+            font-size: 1rem; } }
+        .post-template-default .site-content .post .entry-content .entry-footer a {
+          color: #14225F; }
       .post-template-default .site-content .post .entry-content p {
         font-size: 0.8rem;
         line-height: 1.8rem; }
+        @media (min-width: 600px) {
+          .post-template-default .site-content .post .entry-content p {
+            font-size: 1rem; } }
+        @media (min-width: 1000px) {
+          .post-template-default .site-content .post .entry-content p {
+            font-size: 1.2rem; } }
+      .post-template-default .site-content .post .entry-content ul li {
+        font-size: 0.8rem; }
+        @media (min-width: 600px) {
+          .post-template-default .site-content .post .entry-content ul li {
+            font-size: 1rem; } }
+        @media (min-width: 1000px) {
+          .post-template-default .site-content .post .entry-content ul li {
+            font-size: 1.2rem;
+            line-height: 1.6rem; } }
 
 /* pseudo quote */
 .post-quote::before {
@@ -4396,7 +4483,9 @@ h3.more-article {
   border-radius: 6px;
   background-color: #14225F; }
   .blog .alm-btn-wrap .alm-load-more-btn:hover {
-    background-color: #14225F; }
+    text-shadow: 1px 0.5px 1px #999;
+    -webkit-box-shadow: 5px 3px 5px #42299a;
+            box-shadow: 5px 3px 5px #42299a; }
   .blog .alm-btn-wrap .alm-load-more-btn .ajax-load-more-wrap {
     display: -webkit-box;
     display: -ms-flexbox;
